# api-security

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
src/_typing/: __init__.py  sqla.py
src/api/: deps.py
src/api/routes/: users.py
src/api_security/: __init__.py  dummy_data.py  main.py
src/api_security/_typing/: __init__.py  sqla.py
src/api_security/alembic/: env.py
src/api_security/alembic/versions/: 58adb5c9af07_init.py  8bc8969fc95f_init.py  deed8a1276f2_init.py
src/api_security/api/: deps.py  main.py
src/api_security/api/routes/: login.py  notes.py  users.py  utils.py
src/api_security/core/: __init__.py  config.py  db.py  security.py
src/api_security/core/enums/: backend.py  roles.py
src/api_security/core/exceptions/api/: __init__.py  notes.py  users.py
src/api_security/crud/: __init__.py  notes.py  users.py
src/api_security/models/: __init__.py  base.py  notes.py  users.py
src/api_security/schemas/: __init__.py  base.py  notes.py  users.py
src/api_security/utils/: serialization.py
src/core/: __init__.py  config.py
src/core/enums/: __init__.py
src/models/: __init__.py  notes.py  users.py
src/schemas/: notes.py  users.py
